// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

/**
 * This file defines the structure of messages that get logged to
 * statsd(https://source.android.com/docs/core/ota/modular-system/statsd)
 * from PCS.
 */
edition = "2023";

package com.google.android.as.oss.logging;

import "src/com/google/android/as/oss/logging/enums.proto";

option features.utf8_validation = NONE;
option java_package = "com.google.android.as.oss.logging";
option java_outer_classname = "PcsAtomsProto";

message IntelligenceCountReported {
  CountMetricId count_metric_id = 1;
}

message IntelligenceValueReported {
  ValueMetricId value_metric_id = 1;
  int32 value = 2;
}

message IntelligenceUnrecognisedNetworkRequestReported {
  enum ConnectionType {
    option features.enum_type = CLOSED;

    UNKNOWN_TYPE = 0;
    FC_CHECK_IN = 1;
    FC_TRAINING_START_QUERY = 2;
    FC_TRAINING_RESULT_UPLOAD = 3;
    HTTP = 4;
    PIR = 5;
  }

  ConnectionType connection_type = 1;
  string connection_key = 2
      ;
}

message IntelligenceFederatedLearningTrainingLogReported {
  int64 federated_compute_version = 1
      ;

  TrainingEventKind kind = 2;
  string config_name = 3 ;

  int64 duration_millis = 4;
  int64 example_size = 5;
  int64 run_id = 6 ;

  TrainingErrorCode error_code = 7;
  int64 native_heap_bytes_allocated = 8;
  int64 java_heap_total_memory = 9;
  int64 java_heap_free_memory = 10;
  string model_identifier = 11
      ;

  int64 data_transfer_duration_millis = 12;
  int64 bytes_uploaded = 13;
  int64 bytes_downloaded = 14;
  string error_message = 15 ;

  TrainingDataSourceType data_source = 16;
  int64 high_water_mark_memory_bytes = 17;
  int64 counter_value = 18;
  CollectionName collection_name = 19;

  // Counter enum for marking values/durations of various examplestore related
  // events.
  HistogramCounters histogram_counter = 20;
}

message IntelligenceFederatedLearningSecAggClientLogReported {
  int64 federated_compute_version = 1
      ;

  int64 run_id = 2 ;

  string config_name = 3 ;

  string model_identifier = 4
      ;

  int64 client_session_id = 5 ;

  int64 execution_session_id = 6 ;

  SecAggClientEventKind kind = 7;
  int64 duration_millis = 8;
  SecAggClientRound round = 9;
  SecAggClientCryptoOperationType crypto_type = 10;
  int64 num_dropped_clients = 11;
  int64 received_message_size = 12;
  int64 sent_message_size = 13;
  SecAggClientErrorCode error_code = 14;
}

message IntelligenceFederatedLearningDiagnosisLogReported {
  int64 federated_compute_version = 1
      ;

  int64 diag_code = 2;
  int64 run_id = 3 ;
}
